# libjuice

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
docs/: esp-idf-memory-profile.md
examples/connectivity/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/connectivity/main/: CMakeLists.txt  app_main.c  connectivity.c  idf_component.yml
include/: juice.h
src/: agent.c  agent.h  compat.c  conn.c  conn_mux.c  conn_poll.c  conn_thread.c  getnameinfo.c  hash.c  hmac.c  hmac.h  ice.c  ice.h  log.c  log.h  poll.h  random.c  server.c  socket.h  stun.c  stun.h  tcp.h  thread.h  udp.c  udp.h
